Update start.sh
added maven opts